# Indie_studio

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  conf.ini
includes/Core/: Core.hpp  Dot.hpp  DynamicLoader.hpp  ECS.hpp  Enums.hpp  Events.hpp  IndieException.hpp  Initializor.hpp  Parsers.hpp
includes/Game/: Bot.hpp  Game.hpp  MapGenerator.hpp  Placement.hpp  System.hpp  ThreadPool.hpp
includes/Graph/: Graph.hpp  Obj.hpp  Objects.hpp  enumsGraph.hpp  lib.hpp
irrlicht-1.8.4/lib/Linux/: libIrrlicht.so.1.8
irrlicht-1.8.4/source/Irrlicht/: Makefile
save/: bomberman.save
sources/: core.cpp  main.cpp  main_menu.cpp  menu_continue.cpp  menu_local.cpp  menu_multi.cpp  parsers.cpp
sources/Game/: Game.cpp  bot.cpp  botDump.cpp  botGetters.cpp  botMoves.cpp  placeDump.cpp  placeFinding.cpp  placePlayer.cpp  placement.cpp
sources/Game/System/: BombCountDownSystem.cpp  CollidingSystem.cpp  ExplosionCountDownSystem.cpp  PoseBombSystem.cpp  System_Ctor.cpp
sources/Graph/: Graph.cpp
